<resources>
    <!-- Header Section -->
    <string name="app_name" translatable="false">Backups</string>

    <string name="app_queue_selected_items_fmt" translatable="true"> item(s)</string>
    <string name="app_queue_select_all_items_fmt" translatable="true"> select all</string>
    <string name="app_queue_cancel_selection_fmt" translatable="false">X</string>
    <!-- Header Section End -->

    <!-- Tabs -->

    <!-- Apps -->
    <string name="apps_tab_name">Apps</string>
    <!-- Apps End -->

    <!-- Queue -->
    <string name="queue_tab_name">Queue</string>
    <string name="no_apps_in_queue">No backups in queue</string>
    <!-- Queue End -->

    <!-- Settings -->
    <string name="settings_tab_name">Settings</string>
    <string name="internal_storage_selection">Internal Storage</string>
    <string name="external_storage_selection">SD Card %d</string>

    <string name="output_directory_key" translatable="false">com.backups.app.output_dir_key</string>
    <string name="output_directory_setting" translatable="false">Backups directory</string>
    <string name="output_directory_summary" translatable="false">Select where backups should be stored</string>

    <string name="show_system_apps_key" translatable="false">com.backups.app.show_system_apps</string>
    <string name="show_system_apps_setting">Show system apps</string>
    <string name="show_system_apps_summary">Determines whether system apps will be made available to backup</string>

    <string name="current_theme_key" translatable="false">com.backups.app.theme</string>
    <string name="current_theme_setting">Theme</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <!-- Settings End -->

    <!-- About Us -->
    <string name="app_description">Made to backup apps on the device via a clean and simple interface</string>
    <string name="app_version_header">Version: </string>
    <string name="app_version_number" translatable="false"> 1.0.0 </string>
    <string name="app_license"> &amp; License: </string>
    <string name="app_license_name">GPL v3 </string>

    <string name="contact_developer">Contact Developer</string>
    <string name="contact_developer_description">Found a bug?, let us know</string>

    <string name="app_improvements">Suggestions</string>
    <string name="app_improvements_description">Any advice that can help us improve the app?</string>

    <string name="see_source_code">Check Out The Code</string>
    <string name="see_source_code_description">Check out the app\'s source code</string>

    <string name="meet_team_heading">The Team</string>

    <string name="team_member1_name" translatable="false">Flyingsl0ths</string>
    <string name="team_member2_name" translatable="false">Mazawa</string>

    <string name="team_member_occupation1">Developer</string>
    <string name="team_member_occupation2">Designer</string>

    <!-- About Us End -->

    <!-- Tabs End -->

    <!-- SearchView Related -->
    <string name="search_hint">Search for an app</string>
    <!-- SearchView Related End -->

    <!-- FAB Related -->
    <string name="search_label_text">Search</string>
    <string name="backup_label_text">Backup</string>

    <string name="app_queue_item_selection_label_text">Remove</string>

    <string name="about_us_label_text">About Us</string>
    <string name="share_app_label_text">Share App</string>
    <string name="rate_app_label_text">Rate Us</string>

    <string name="unable_to_fetch_apk_data_message">Unable to fetch apk data</string>

    <string name="commencing_backup_message">Backing up %d app(s)</string>

    <string name="fetching_data_message">Fetching apk data…</string>

    <string name="insufficient_storage_message">Insufficient storage available to create backup</string>

    <string name="no_backups_selected_message">No backups have been selected yet</string>

    <string name="storage_volume_not_present">Storage location unavailable…\ndefaulting to device storage</string>

    <string name="no_storage_volumes_present">Unable to locate any storage devices</string>

    <string name="unknown_storage_volume">Unknown storage device</string>

    <string name="backup_in_progress_message">A backup is already in progress</string>

    <string name="backup_in_progress_message_alt">A backup is currently in progress\nPlease wait until it is finished and restart the app</string>

    <string name="unable_to_create_backup_message">Unable to create backup of:\n %s</string>

    <!-- FAB Related End -->


    <!-- App Related End -->
    <string name="bug_report_email_subject">BUG</string>
    <string name="feature_request_email_subject">FEATURE REQUEST</string>

    <string name="bug_report_email_body">
        Please describe:\n
        - The series of events leading up the bug encountered\n\n
        - As well as describe what is it the bug does\n\n</string>

    <string name="feature_request_email_body">
        Please describe in detail:\n
        - What the purpose of the feature is\n\n
        - Why you think the feature will improve the app\n\n
        - As well as a basic example of the feature\'s functionality in use\n\n</string>

    <string name="share_app_intent_title">The Backups App</string>
    <string name="share_app_intent_body">Wow this is a pretty great app!</string>
    <string name="rate_app_message">Give us a star on github!</string>
    <!-- Contact Related End -->
</resources>
