<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_anchorGravity="center">


        <ImageView
            android:id="@+id/app_logo_iv"
            android:layout_width="@dimen/app_icon_size"
            android:layout_height="@dimen/app_icon_size"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/app_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/h1" />

        <TextView
            android:id="@+id/app_desc_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/app_description"
            android:textSize="@dimen/h5" />

        <LinearLayout
            android:id="@+id/versioning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/app_versioning_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/app_version"
                android:textSize="@dimen/h4" />

            <TextView
                android:id="@+id/app_version_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="false"
                android:gravity="center"
                android:text="@string/app_version_number"
                android:textSize="@dimen/h4" />

            <TextView
                android:id="@+id/app_license_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="false"
                android:gravity="center"
                android:linksClickable="false"
                android:text="@string/app_license"
                android:textSize="@dimen/h4" />

            <TextView
                android:id="@+id/app_license_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="true"
                android:gravity="center"
                android:linksClickable="true"
                android:text="@string/app_license_name"
                android:textColorLink="@color/secondaryDarkColor"
                android:textSize="@dimen/h4"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contactDeveloper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/contact_dev_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginBottom="20dp"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/contact_developer"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/h3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_developer_description"
                    android:textSize="@dimen/h4" />
            </LinearLayout>

            <View
                android:layout_width="335dp"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider"
                android:clickable="false" />

            <LinearLayout
                android:id="@+id/send_feature_suggestion_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginBottom="20dp"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/app_improvements"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/h3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_improvements_description"
                    android:textSize="@dimen/h4" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider"
                android:clickable="false" />

            <LinearLayout
                android:id="@+id/view_source_code_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|left"
                android:layout_marginBottom="20dp"
                android:focusable="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/see_source_code"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/h3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_source_code_description"
                    android:textSize="@dimen/h4" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider"
                android:clickable="false" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/meetTheTeamHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:clickable="false"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:layout_marginEnd="10dp"
                android:clickable="false"
                android:text="@string/meet_team_heading"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/h3" />

            <ImageView
                android:layout_width="@dimen/member_role_icon_sizes"
                android:layout_height="@dimen/member_role_icon_sizes"
                android:clickable="false"
                app:srcCompat="@drawable/ic_launcher_foreground" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/members"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="15dp"
            android:clickable="false"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/member1View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="25dp"
                android:clickable="false"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/team_member_profile_size"
                    android:layout_height="@dimen/team_member_profile_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:clickable="false"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <LinearLayout
                    android:id="@+id/member1_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:clickable="false"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            android:clickable="false"
                            android:text="@string/team_member1_name"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="@dimen/h3" />

                        <ImageView
                            android:layout_width="@dimen/member_social_media_icon_sizes"
                            android:layout_height="@dimen/member_social_media_icon_sizes"
                            android:layout_weight="1"
                            android:clickable="false"
                            app:srcCompat="@drawable/ic_launcher_foreground" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            android:clickable="false"
                            android:text="@string/team_member_occupation1"
                            android:textSize="@dimen/h4" />

                        <ImageView
                            android:id="@+id/member1_github"
                            android:layout_width="@dimen/member_social_media_icon_sizes"
                            android:layout_height="@dimen/member_social_media_icon_sizes"
                            android:focusable="true"
                            app:srcCompat="@drawable/ic_launcher_foreground" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/member2View"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginBottom="35dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/team_member_profile_size"
                    android:layout_height="@dimen/team_member_profile_size"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="20dp"
                    android:clickable="false"
                    app:srcCompat="@drawable/ic_launcher_foreground" />

                <LinearLayout
                    android:id="@+id/member2_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|left"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            android:clickable="false"
                            android:text="@string/team_member2_name"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="@dimen/h3" />

                        <ImageView
                            android:layout_width="@dimen/member_social_media_icon_sizes"
                            android:layout_height="@dimen/member_social_media_icon_sizes"
                            android:layout_weight="1"
                            android:clickable="false"
                            app:srcCompat="@drawable/ic_launcher_foreground" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            android:clickable="false"
                            android:text="@string/team_member_occupation2"
                            android:textSize="@dimen/h4" />

                        <ImageView
                            android:id="@+id/member2_github"
                            android:layout_width="@dimen/member_social_media_icon_sizes"
                            android:layout_height="@dimen/member_social_media_icon_sizes"
                            android:focusable="true"
                            app:srcCompat="@drawable/ic_launcher_foreground" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>