<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/app_queue_search_button"
        style="@style/FloatingActionButtonInactive"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/app_queue_search_label"
        style="@style/FloatingActionButtonLabel"
        android:layout_marginEnd="24dp"
        android:text="@string/search_label_text"
        app:layout_constraintBottom_toBottomOf="@+id/app_queue_search_button"
        app:layout_constraintEnd_toStartOf="@+id/app_queue_search_button"
        app:layout_constraintTop_toTopOf="@+id/app_queue_search_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/app_queue_backup_button"
        style="@style/FloatingActionButtonInactive"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/app_queue_search_button"
        app:layout_constraintEnd_toEndOf="@+id/app_queue_search_button"
        app:layout_constraintStart_toStartOf="@+id/app_queue_search_button" />

    <TextView
        android:id="@+id/app_queue_backup_label"
        style="@style/FloatingActionButtonLabel"
        android:layout_marginEnd="24dp"
        android:text="@string/backup_label_text"
        app:layout_constraintBottom_toBottomOf="@+id/app_queue_backup_button"
        app:layout_constraintEnd_toStartOf="@+id/app_queue_backup_button"
        app:layout_constraintTop_toTopOf="@+id/app_queue_backup_button" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/app_queue_item_selection_button"
        style="@style/FloatingActionButtonInactive"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/app_queue_backup_button"
        app:layout_constraintEnd_toEndOf="@+id/app_queue_backup_button"
        app:layout_constraintStart_toStartOf="@+id/app_queue_backup_button" />

    <TextView
        android:id="@+id/app_queue_item_selection_label"
        style="@style/FloatingActionButtonLabel"
        android:layout_marginEnd="24dp"
        android:text="@string/app_queue_item_selection_label_text"
        app:layout_constraintBottom_toBottomOf="@+id/app_queue_item_selection_button"
        app:layout_constraintEnd_toStartOf="@+id/app_queue_item_selection_button"
        app:layout_constraintTop_toTopOf="@+id/app_queue_item_selection_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
