<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/about_us_section_button"
        style="@style/FloatingActionButtonInactive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/about_us_section_label"
        style="@style/FloatingActionButtonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/about_us_label_text"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="@+id/about_us_section_button"
        app:layout_constraintEnd_toStartOf="@+id/about_us_section_button"
        app:layout_constraintTop_toTopOf="@+id/about_us_section_button"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/rate_app_button"
        style="@style/FloatingActionButtonInactive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/about_us_section_button"
        app:layout_constraintEnd_toEndOf="@+id/about_us_section_button"
        app:layout_constraintStart_toStartOf="@+id/about_us_section_button"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/rate_app_label"
        style="@style/FloatingActionButtonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/rate_app_label_text"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="@+id/rate_app_button"
        app:layout_constraintEnd_toStartOf="@+id/rate_app_button"
        app:layout_constraintTop_toTopOf="@+id/rate_app_button"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share_app_button"
        style="@style/FloatingActionButtonInactive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/rate_app_button"
        app:layout_constraintEnd_toEndOf="@+id/rate_app_button"
        app:layout_constraintStart_toStartOf="@+id/rate_app_button"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/share_app_label"
        style="@style/FloatingActionButtonLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/share_app_label_text"
        android:textColor="#212121"
        app:layout_constraintBottom_toBottomOf="@+id/share_app_button"
        app:layout_constraintEnd_toStartOf="@+id/share_app_button"
        app:layout_constraintTop_toTopOf="@+id/share_app_button"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>